--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,6 +3,7 @@
         "outDir": "../dist",
         "module": "es6",
         "target": "es2017",
+        "declaration": true,
         "moduleResolution": "node",
         "experimentalDecorators": true
     },
