--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "TypeScript function argument validator by decorators",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
-    "author": "bound2 <bound2@noreply.users.github.com>",
+    "author": "bound2 <9380102+bound2@users.noreply.github.com>",
     "repository": {
         "type": "git",
         "url": "https://github.com/bound2/fivem-ts-arg-validator"
